--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "dom"
     ],
     "paths": {
-        "@apply-chance/share":["src/app/shared/index.ts"]
+        "@apply-chance/share":["src/app/shared/index.ts"],
+        "@apply-chance/core":["src/app/core/index.ts"]
     }
   },
   "angularCompilerOptions": {
